--- a/boot4.html
+++ b/boot4.html
@@ -609,16 +609,16 @@ left:90%;
 			<br/>
 			Which type of gas is used in your household per month?
 			<br/>
-    <select name="search_option" style="width:70%;" id="fuel-type">
+    <select name="search_option" style="width:70%;" id="fuel-type" required>
 <option value="1.8895296">CNG</option>
-<option value="2.9910628" selected="">LPG</option>
+<option value="2.9910628">LPG</option>
 <option value="1.8895296">PNG</option>
     </select>
 	<br/>
 	<br/>
 	How much gas is used per month?
 	<br/>
-    <input type="number" id="amount-fuel" value="" placeholder="enter in kg">
+    <input type="number" id="amount-fuel" value="" placeholder="enter value in Kg" required>
 <br/>
 			<input type="submit" id="GOD" />
 
@@ -870,7 +870,7 @@ left:90%;
   <h1 style="text-align:center; font-family: 'Quicksand', sans-serif; margin-top:3%; font-size:300%;">HAVE YOU FINISHED ENTERING YOUR VALUES??...<br/>
   THEN LETS PROCEED</h1>
     <div style="background-color:rgba(0,0,0,0.9); padding-top:1%; padding-bottom:2%; padding-left:1%; color:white; font-size:180%; margin:auto;">
-  <form style="font-family: 'Quicksand', sans-serif;" action="boot5.html" id="final">
+  <form style="font-family: 'Quicksand', sans-serif;" action="boot5.html#section1" id="final">
   I agree that the given informations are reasonably accurate to get the correct result <input type="checkbox" required /><br/>
 <input type="submit"  style="position:absolute; bottom:1.5%; left:46%; height:1%; font-size:80%;">
   </form>
