--- a/boot5.html
+++ b/boot5.html
@@ -258,7 +258,7 @@ Save electricity by only using as much as I need <input type="checkbox" required
  <div style="background-color:white; color:brown; padding:4% 3%; margin:auto; font-size:180%; font-family: 'Orbitron', sans-serif; text-align:center; position:relative; top:20%;">
 <p>Thank You for taking the Carbon Pledge and committing to save Planet Earth!</p>
 </div>
-<a href="boot4.html"><button class="button1" onclick="endclr()">CALCULATE AGAIN</button></a>
+<a href="index.html#section2"><button class="button1">CALCULATE AGAIN</button></a>
 </div>
 <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 <script src="main2new.js"></script>
