--- a/boot4.html
+++ b/boot4.html
@@ -500,6 +500,7 @@ left:90%;
          		  <li><a href="#section3">Travel</a></li>
 				  <li><a href="#section2">Home Energy</a></li>
 		  <li><a href="#section4">Waste</a></li>
+	    <li><a href="#section5">Submit</a></li>
           
 		  
        </ul>
@@ -643,7 +644,7 @@ left:90%;
  <option value="3" >large (SUV)</option>
  </select>-->
  <br/>
-            <input type="number" id="smalpetrol" name="smalpetrol" required style="width:70%;" placeholder="distance travelled in petrol car" /> By small petrol car=<h1 style="font-size:90%; display:inline; padding:1%; background-color:black; color:white; margin-left:-0%;" id="smalpetrltag">__</h1>
+            <input type="number" id="smalpetrol" name="smalpetrol" required style="width:70%;" placeholder="distance travelled in petrol car" /> By small petrol car=<h1 style="font-size:90%; display:inline; padding:1%; background-color:black; color:white; margin-left:-0%;" id="smalpetrltag"></h1>
 			<br/>
 			<br/>
 		    <input type="number" id="smaldiesel" name="smaldiesel" required style="width:70%;" placeholder="distance travelled in diesel car" /> By small diesel car=<h1 style="font-size:90%; display:inline; padding:1%; background-color:black; color:white; margin-left:-0%;" id="smaldieseltag"></h1>
