--- a/boot5.html
+++ b/boot5.html
@@ -272,7 +272,7 @@ Save electricity by only using as much as I need <input type="checkbox" required
     Practicing Reduce, Recycle and Reuse philosophy<input type="checkbox" required /><br/>
 	<br/>
     Buying goods which are environment friendly<input type="checkbox" required /><br/>
-		<button id="selectall" >select</br> all</button>
+		<button id="selectall" >select all</button>
 	<br/>
 	
 				<input type="submit" />
