--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ by releasing more GHG in the atmosphere than are necessary to maintain the plane
 </div>-->
 </div>
 <div id="section3" class="container-fluid">
-<h1 style="text-align:center;  font-family: 'Quicksand', sans-serif; margin-top:7%; margin-bottom:7%; font-size:350%;">Have you finished login? okayy...
+<h1 style="text-align:center;  font-family: 'Quicksand', sans-serif; margin-top:7%; margin-bottom:7%; font-size:350%;">Have you finished login? okay...
 now lets proceed to the calculator!!!</h1>
 <a href="boot4.html"><button class="button1">PROCEED</button></a>
 </div>
