--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ text-align:center;
 margin:auto;
 }
 	.button1:hover {
-    background-color: black;
-    color: white;
-	box-shadow: 0 1% 1.5% 0 rgba(255,255,255,0.24),0 2% 5% 0 rgba(255,255,255,0.19);
+    background-color: white;
+    color: #4CAFa0;
+	box-shadow: 0 6px 8px 0 rgba(255,255,255,0.24),0 7px 20px 0 rgba(255,255,255,0.19);
 }
 	.button1 {
-    background-color: white;
-    color: black;
+    background-color: #4CAFa0;
+    color: white;
     padding:1% 2%;
     text-align: center;
 	    -webkit-transition-duration: 0.4s;
@@ -295,7 +295,7 @@ font-family: 'Quicksand', sans-serif;
 input[type=submit]:hover {
   background-color: white;
     color: #008CBA;
-	box-shadow: 0 12px 16px 0 rgba(255,255,255,0.24),0 17px 50px 0 rgba(255,255,255,0.19);
+	box-shadow: 0 6px 8px 0 rgba(255,255,255,0.24),0 7px 20px 0 rgba(255,255,255,0.19);
 }
 .dot {  
 margin-bottom:30%;
