--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ text-align:center;
 margin:auto;
 }
 	.button1:hover {
-    background-color: white;
-    color: #4CAFa0;
+    background-color: #008CBA;
+    color: white;
 	box-shadow: 0 6px 8px 0 rgba(255,255,255,0.24),0 7px 20px 0 rgba(255,255,255,0.19);
 }
 	.button1 {
-    background-color: #4CAFa0;
-    color: white;
+    background-color:white;
+    color: #008CBA;
     padding:1% 2%;
     text-align: center;
 	    -webkit-transition-duration: 0.4s;
@@ -293,7 +293,7 @@ font-family: 'Quicksand', sans-serif;
     transition-duration: 0.4s;
 }
 input[type=submit]:hover {
-  background-color: white;
+  background-color: rgb(200,200,200);
     color: #008CBA;
 	box-shadow: 0 6px 8px 0 rgba(255,255,255,0.24),0 7px 20px 0 rgba(255,255,255,0.19);
 }
