--- a/boot5.html
+++ b/boot5.html
@@ -71,7 +71,7 @@ function drawChart1() {
   <style>
   body {
       position: relative; 
-	  	      overflow:hidden;
+	  	      //overflow:hidden;
   }
   
   #section1 {padding-top:6%;height:1000px;;color: #fff; background-image:url("images/5.jpg");}
@@ -160,6 +160,22 @@ input[type=submit]:hover{
     background-color: #4CAFa0;
 		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.button11:hover{
+    background-color: #4CAFa0;
+		box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.button11{
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+	margin:1% 0% 0% 50%;
+    cursor: pointer;
+		    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+	font-family:'Quicksand', sans-serif;
+}
 #selectall
 {
 background-color:#4CAFa0;
@@ -233,7 +249,7 @@ left:95%;
 <h1 id="namech" style="display:inline-block; margin-left:2%; text-transform:uppercase; font-family: 'Quicksand', sans-serif;">jhg</h1>
 </div>
 <div style="width:100%; height:100%;">
-<h1 style="text-align:center; font-family: 'Quicksand', sans-serif; color:black;">Your Carbon Emission Graph</h1>
+<h1 style="text-align:center; font-family: 'Quicksand', sans-serif; color:white;">Your Carbon Emission Graph</h1>
 <div id="graph">
 	<div id="piechart" style="width: 100%; height: 100%;"></div>
 </div>
@@ -280,10 +296,13 @@ Save electricity by only using as much as I need <input type="checkbox" required
 </div>
   </div>
 <div id="section3" class="container-fluid">
- <div style="background-color:white; color:brown; padding:4% 3%; margin:auto; font-size:180%; font-family: 'Orbitron', sans-serif; text-align:center; position:relative; top:20%;">
+ <div style="background-color:white; color:brown; padding:4% 3%; margin:auto; font-size:180%; font-family: 'Orbitron', sans-serif; text-align:center; position:relative; top:15%;">
 <p>Thank You for taking the Carbon Pledge and committing to save Planet Earth!</p>
 </div>
-<a href="index.html#section2"><button class="button1">CALCULATE AGAIN</button></a>
+<a href="boot4.html"><button class="button1" style="position:absolute; bottom:19%;">CALCULATE AGAIN</button></a>
+<div style="position:relative; top:37%; right:5.5%;">
+<a href="index.html#section2"><button class="button11">NEW USER - LOGIN</button></a>
+</div>
 </div>
 <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 <script src="main2new.js"></script>
