--- a/boot5.html
+++ b/boot5.html
@@ -71,7 +71,7 @@ function drawChart1() {
   <style>
   body {
       position: relative; 
-	  	      //overflow:hidden;
+	  	      overflow:hidden;
   }
   
   #section1 {padding-top:6%;height:1000px;;color: #fff; background-image:url("images/5.jpg");}
